--- a/src/components/sections/Tail.astro
+++ b/src/components/sections/Tail.astro
@@ -28,17 +28,17 @@ const { beian } = basics
       )
     }
       <p class='mt-3 text-center font-mono'>
-        I <span class='font-black'>100%</span> Proudly Use <a
+         <span class='font-black'></span>  <a
           class='font-black'
           href='https://github.com/MiraHikari/portfolio'>
-          <span class='underline'>Portfolio</span>
-        </a> that Made by <a
+          <span class='underline'></span>
+        </a><a
           class='font-black'
           href='https://github.com/MiraHikari'>
-          <span class='underline'>MiraHikari</span>
+          <span class='underline'></span>
         </a>
       </p>
-      <p class='mt-3 text-center'>2023-PRESENT © Gong_cx ✨</p>
+      <p class='mt-3 text-center'></p>
     </span>
   </div>
 </div>
